added PIN security fixed all remaining discovered bugs

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,4 +34,7 @@
 
 
 
+<string name="unlock">Unlock</string>
+<string name="pin">Please enter the PIN to unlock the accounts.</string>
+<string name="invalid">Invalid PIN</string>
 </resources>
